--- a/console/package.json
+++ b/console/package.json
@@ -21,6 +21,7 @@
     "axios-case-converter": "^1.1.1",
     "buffer": "^6.0.3",
     "eventemitter3": "^5.0.1",
+    "gsap": "^3.14.2",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "lenis": "^1.3.17",
