refactor(atlas): restructure directory and update references to databases
- Updated the .gitignore to exclude the new databases directory instead of atlas.
- Refactored PowerShell and shell scripts to change directory references from atlas to databases.
- Adjusted Taskfile to reflect the new path for generating enums.
- Removed obsolete atlas configuration and migration files, streamlining the project structure.
- Updated documentation to reflect changes in the generated database code location.

--- a/.gitignore
+++ b/.gitignore
@@ -46,9 +46,9 @@ log/
 *.backup
 
 ## Atlas generated content
-atlas/build/
-atlas/gen/
-atlas/debug.txt
+databases/build/
+databases/gen/
+databases/debug.txt
 
 ## Uploaded assets
 assets/**/*
@@ -116,8 +116,8 @@ data/**/*.sql
 !pkgs/**
 !pkgs/cache/
 !pkgs/cache/**
-!atlas/
-!atlas/**
+!databases/
+!databases/**
 !enums/
 !enums/**
 !inputs/
