--- a/console/package.json
+++ b/console/package.json
@@ -17,6 +17,7 @@
     "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.6",
+    "@types/three": "^0.182.0",
     "axios": "^1.13.1",
     "axios-case-converter": "^1.1.1",
     "buffer": "^6.0.3",
@@ -35,6 +36,7 @@
     "react-intersection-observer": "^10.0.0",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.9.5",
+    "three": "^0.182.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
