--- a/console/package.json
+++ b/console/package.json
@@ -28,6 +28,7 @@
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "motion": "^12.29.0",
+    "postprocessing": "^6.38.2",
     "react": "^19.1.1",
     "react-datepicker": "^9.1.0",
     "react-dom": "^19.1.1",
