--- a/console/.env.dev
+++ b/console/.env.dev
@@ -2,3 +2,4 @@ VITE_BUILD_ENV=dev
 VITE_APP_ID=nfx-console-dev
 VITE_API_URL=http://192.168.1.64:10166
 VITE_WS_URL=ws://192.168.1.64:10166
+VITE_PORT=10168
