--- a/console/.env.prod
+++ b/console/.env.prod
@@ -2,3 +2,4 @@ VITE_BUILD_ENV=prod
 VITE_APP_ID=nfx-console-prod
 VITE_API_URL=https://api.nebulaforgex.com:10167
 VITE_WS_URL=wss://api.sjgztea.com:10012:10167
+VITE_PORT=10168
